# test_cbsvib

./: Dockerfile  README.md  db.sqlite3  docker-compose.yml  pyproject.toml  requirements.txt
chat/: consumers.py  views.py
chat/templates/: index.html  room.html
core/: asgi.py  settings.py  urls.py
events/: admin.py  docs.py  models.py  serializers.py  tasks.py  urls.py  validators.py  views.py
events/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py
users/migrations/: 0001_initial.py
