[tool.poetry]
name = "test-cbsvib"
version = "0.1.0"
description = ""
authors = ["Stefan <epiktetov.sv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
djangorestframework = "^3.14.0"
djoser = "^2.2.2"
drf-spectacular = "^0.27.1"
django-cors-headers = "^4.3.1"
django-phonenumber-field = {extras = ["phonenumberslite"], version = "^7.3.0"}
channels = {extras = ["daphne"], version = "^4.0.0"}
channels-redis = "^4.2.0"
django-bootstrap-v5 = "^1.0.11"
celery = {extras = ["redis"], version = "^5.3.6"}

[tool.poetry.group.dev.dependencies]
flake8 = "6.1.0"
flake8-django = "^1.4"
flake8-pyproject = "^1.2.3"
mypy = "^1.9.0"
black = "^24.2.0"
isort = "^5.13.2"
types-requests = "^2.31.0.20240218"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 120
count = true
ignore = ['E203']

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
    | \.mypy_cache
  )/
)
'''

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bood.settings"
python_files = ["py_tests/*.py"]
